tests/errors/test_79.x
// Imported standard library does not exist

import what;

fn main() -> void {}
